# Daily_Summary

./: .env.example  .env.exmaple  .gitignore  README.md  daily_summary.py  main.py  pyproject.toml
